[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "graphviz",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py314']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

mypy_path = "src"

[[tool.mypy.overrides]]
module = "graphviz.*"
ignore_missing_imports = true